[project]
name = "comfyui-nk2e"
version = "0.1.2"
description = "NK2E — experimental, unofficial in-context image editing for Krea 2 (community project; not affiliated with Krea)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/Nynxz/ComfyUI-NK2E"

[tool.comfy]
PublisherId = "nynxz"
DisplayName = "ComfyUI-NK2E"
Icon = "https://avatars.githubusercontent.com/u/60878743?v=4"
Repository = "https://github.com/Nynxz/ComfyUI-NK2E"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear
select = ["E", "W", "F", "I", "UP", "B"]
